fix header overflow on category, subcategory, and provider pages

--- a/table-of-contents-style-homepage/category.css
+++ b/table-of-contents-style-homepage/category.css
@@ -197,11 +197,17 @@ option {
   }
 }  
 
-@media screen and (max-width: 1056px) {
+@media screen and (max-width: 1240px) {
+  .breadcrumb-box {
+    display: none;
+  }
 
   .spanish, .about {
     display: inline;
   }
+}
+
+@media screen and (max-width: 1056px) {
 
   .left-column {
     display: flex;
